现在宠友圈不能发送换行符了，用户试图发送换行符会导致取消输入

--- a/HiChongSwift/Find.storyboard
+++ b/HiChongSwift/Find.storyboard
@@ -2246,7 +2246,10 @@ So as I pray, Unlimited Blade Works.</string>
                                             <rect key="frame" x="8" y="8" width="584" height="133"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="1ob-UL-Pcy" id="JUN-Uj-ms7"/>
+                                            </connections>
                                         </textView>
                                     </subviews>
                                     <constraints>
