--- a/HiChongSwift/Find.storyboard
+++ b/HiChongSwift/Find.storyboard
@@ -2093,6 +2093,94 @@ So as I pray, Unlimited Blade Works.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FindCatelogWhiteCellIdentifier" rowHeight="159" id="vUo-f9-LOb" customClass="FindCatelogWhiteCell" customModule="HiChongSwift" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vUo-f9-LOb" id="B0l-fp-VTu">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbo-AI-HWG">
+                                            <rect key="frame" x="8" y="50" width="60" height="60"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="U9G-nD-rCA"/>
+                                                <constraint firstAttribute="width" constant="60" id="shi-os-DLf"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sqFemale" translatesAutoresizingMaskIntoConstraints="NO" id="FK3-Jq-MgI">
+                                            <rect key="frame" x="80" y="50" width="15" height="15"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人物昵称" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4z-p9-Xpf">
+                                            <rect key="frame" x="103" y="49" width="60" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.34509804844856262" green="0.61960786581039429" blue="0.7450980544090271" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距离" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GnC-ae-Wua">
+                                            <rect key="frame" x="80" y="93" width="28" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HvN-VI-LmY">
+                                            <rect key="frame" x="562" y="65" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="HvN-VI-LmY" secondAttribute="height" multiplier="1:1" id="Fpa-Aj-Fkw"/>
+                                                <constraint firstAttribute="height" constant="30" id="lFd-qk-4w3"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L4a-Oz-u1a">
+                                            <rect key="frame" x="524" y="65" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="L4a-Oz-u1a" secondAttribute="height" multiplier="1:1" id="Faz-gJ-ChI"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vg4-t3-5eF">
+                                            <rect key="frame" x="486" y="65" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="vg4-t3-5eF" secondAttribute="height" multiplier="1:1" id="fV7-Y0-iKK"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxl-Ld-cNl">
+                                            <rect key="frame" x="8" y="149" width="584" height="10"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="10" id="uIt-10-WO1"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="vg4-t3-5eF" firstAttribute="height" secondItem="HvN-VI-LmY" secondAttribute="height" id="23l-Pm-mRF"/>
+                                        <constraint firstAttribute="centerY" secondItem="nbo-AI-HWG" secondAttribute="centerY" id="4IB-D1-wUh"/>
+                                        <constraint firstItem="HvN-VI-LmY" firstAttribute="leading" secondItem="L4a-Oz-u1a" secondAttribute="trailing" constant="8" id="9i1-Nz-2JD"/>
+                                        <constraint firstItem="wxl-Ld-cNl" firstAttribute="leading" secondItem="B0l-fp-VTu" secondAttribute="leading" constant="8" id="CHb-zA-sQh"/>
+                                        <constraint firstItem="L4a-Oz-u1a" firstAttribute="leading" secondItem="vg4-t3-5eF" secondAttribute="trailing" constant="8" id="EoV-Xp-DCV"/>
+                                        <constraint firstItem="GnC-ae-Wua" firstAttribute="leading" secondItem="nbo-AI-HWG" secondAttribute="trailing" constant="12" id="Fma-M3-eHT"/>
+                                        <constraint firstItem="FK3-Jq-MgI" firstAttribute="leading" secondItem="nbo-AI-HWG" secondAttribute="trailing" constant="12" id="HkM-mj-MWY"/>
+                                        <constraint firstItem="nbo-AI-HWG" firstAttribute="leading" secondItem="B0l-fp-VTu" secondAttribute="leading" constant="8" id="PYi-ZZ-0gP"/>
+                                        <constraint firstAttribute="centerY" secondItem="HvN-VI-LmY" secondAttribute="centerY" id="QQT-9e-HuB"/>
+                                        <constraint firstAttribute="bottom" secondItem="wxl-Ld-cNl" secondAttribute="bottom" id="TD9-1Z-qNX"/>
+                                        <constraint firstItem="FK3-Jq-MgI" firstAttribute="top" secondItem="nbo-AI-HWG" secondAttribute="top" id="Uyp-dU-VM9"/>
+                                        <constraint firstAttribute="trailing" secondItem="wxl-Ld-cNl" secondAttribute="trailing" constant="8" id="WD2-8i-ygj"/>
+                                        <constraint firstAttribute="centerY" secondItem="L4a-Oz-u1a" secondAttribute="centerY" id="acZ-4q-c0c"/>
+                                        <constraint firstItem="GnC-ae-Wua" firstAttribute="bottom" secondItem="nbo-AI-HWG" secondAttribute="bottom" id="eeA-DV-YoP"/>
+                                        <constraint firstItem="k4z-p9-Xpf" firstAttribute="centerY" secondItem="FK3-Jq-MgI" secondAttribute="centerY" constant="0.5" id="jeC-pc-Eqw"/>
+                                        <constraint firstAttribute="centerY" secondItem="vg4-t3-5eF" secondAttribute="centerY" id="lx5-TF-qal"/>
+                                        <constraint firstItem="k4z-p9-Xpf" firstAttribute="leading" secondItem="FK3-Jq-MgI" secondAttribute="trailing" constant="8" id="mdI-MD-lvM"/>
+                                        <constraint firstAttribute="trailing" secondItem="HvN-VI-LmY" secondAttribute="trailing" constant="8" id="pZI-s4-AAq"/>
+                                        <constraint firstItem="L4a-Oz-u1a" firstAttribute="height" secondItem="HvN-VI-LmY" secondAttribute="height" id="sIt-l8-G8s"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="distanceLabel" destination="GnC-ae-Wua" id="cQM-Zf-Iaa"/>
+                                    <outlet property="genderImageView" destination="FK3-Jq-MgI" id="vUN-Gx-Ica"/>
+                                    <outlet property="keeperAvatarImageView" destination="nbo-AI-HWG" id="dd9-IM-ruG"/>
+                                    <outlet property="sepratorHeight" destination="uIt-10-WO1" id="Ygu-cd-DjH"/>
+                                    <outlet property="sepratorImageView" destination="wxl-Ld-cNl" id="v9S-5j-hkt"/>
+                                    <outlet property="userNameLabel" destination="k4z-p9-Xpf" id="0qE-br-PYc"/>
+                                    <outletCollection property="petImageViews" destination="HvN-VI-LmY" collectionClass="NSMutableArray" id="70I-Yf-lut"/>
+                                    <outletCollection property="petImageViews" destination="L4a-Oz-u1a" collectionClass="NSMutableArray" id="M2o-aM-07H"/>
+                                    <outletCollection property="petImageViews" destination="vg4-t3-5eF" collectionClass="NSMutableArray" id="yrb-Oc-fXj"/>
+                                </connections>
+                            </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindCatalogCellIdentifier" rowHeight="76" id="Igb-2f-Ve7" customClass="FindCatalogCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Igb-2f-Ve7" id="SB8-op-zKJ">
@@ -2181,6 +2269,9 @@ So as I pray, Unlimited Blade Works.</string>
                             </connections>
                         </segmentedControl>
                     </navigationItem>
+                    <connections>
+                        <outlet property="icySegmentControl" destination="u6t-2f-hHo" id="gvR-xF-3AS"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h9A-P6-ha7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
